add fuction load

--- a/views/ManageAddproduct.ejs
+++ b/views/ManageAddproduct.ejs
@@ -89,7 +89,7 @@
                             </div>
                             <div class="form-control-button">
                                 <button class="confirm" type="submit">Save</button>
-                                <button class="no-confirm" onclick="return confirm('ต้องการล้างข้อมูลทั้งหมด?')" type="reset">cancel</button>
+                                <button class="no-confirm" onclick="confirm('ต้องการล้างข้อมูลทั้งหมด?')" type="reset">cancel</button>
                             </div>
                         </div>
                     </div>
