--- a/views/clienHowtoBuy.ejs
+++ b/views/clienHowtoBuy.ejs
@@ -8,10 +8,12 @@
     <title> ขั้นตอนการสั่งซื้อ parndhom | ปานหอม น้ำหอมติดรถยนต์</title>
     <link href="/image/favicon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/showload.css">
     <script src="https://kit.fontawesome.com/79561afa19.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <%- include('Allshowload') %> 
     <%- include('headerClient') %>    
     <main class="howto-buy">
         <div class="container-howto">
@@ -63,6 +65,7 @@
         </div>
     </main>
     <%- include('footerClient') %> 
+    <script src="/script/scriptShowload.js"></script>
     <script src="/script/script.js"></script>
 </body>
 </html>
