--- a/views/clientStatusOrder.ejs
+++ b/views/clientStatusOrder.ejs
@@ -7,9 +7,11 @@
     <title>ตรวจสอบพัสดุ parndhom | ปานหอม น้ำหอมติดรถยนต์</title>
     <link href="/image/favicon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/showload.css">
     <script src="https://kit.fontawesome.com/79561afa19.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <%- include('Allshowload') %> 
     <%- include('headerClient') %>    
     
     <main class="main-status">
@@ -48,6 +50,7 @@
     </main>
 
     <%- include('footerClient') %> 
+    <script src="/script/scriptShowload.js"></script>
     <script src="/script/script.js"></script>
     <script src="/script/scriptStatusOrder.js"></script>
     <script type="text/javascript">
