--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,9 @@ header {
     justify-content: space-between;
     height: 100px;
 }
+/* -------------------- CONTAINER LOAD----- */
+
+
 main{
     width:100vw;
 }
@@ -1144,17 +1147,14 @@ footer {
 }
 .i-main{
     position:absolute;
-  
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgba(184, 184, 184, 0.1);
-   
 }
 
-  
 .box-detail{
     position: relative;
     top: 5%;
@@ -1404,7 +1404,7 @@ padding: 10px;
         z-index: 5;
         transition: var(--tran-02);
     }
-  
+ 
 
     .logo{
         position:absolute;
@@ -1621,6 +1621,7 @@ padding: 10px;
     .container-sp{
         flex-direction: column;
         padding: 0;
+        padding-top: 100px;
     }
     .image-select{
      
@@ -1722,6 +1723,9 @@ padding: 10px;
         width: 100vw;
         height: auto;
         padding: 5px 5px;
+    }
+    .form-payment{
+        padding-top: 100px;
     }
     .purchase-list{
         width: 100vw;
@@ -1829,8 +1833,123 @@ padding: 10px;
         left: 0;
         background-color:rgb(124, 124, 124);
     }
+
+    .i-main{
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        padding-top: 80px;
+    }
+    
+    .box-detail{
+        position: relative;
+        top: 5%;
+        width: auto;
+        height: auto;
+        padding: 5px 10px;
+
+    }
+    .i-box{
+        width: 100%;
+        height: 100%;
+    }
+    .main-status{
+        padding-top: 150px;
+    }
+    .container-howto{
+       padding-top: 80px;
+    }
+
 }
 
+/* -------------------------- load------------------- */
+
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    transform: ts;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: rgb(255, 255, 255);
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
 
 
 
