--- a/views/clientConfirmOrder.ejs
+++ b/views/clientConfirmOrder.ejs
@@ -7,9 +7,11 @@
     <title>ยืนยันการสั่งซื้อ</title>
     <link href="/image/favicon/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/showload.css">
     <script src="https://kit.fontawesome.com/79561afa19.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <%- include('Allshowload') %> 
     <%- include('headerClient') %>
     <main class="main-confirmorder">
         
@@ -102,6 +104,7 @@
     </div>
 </main>
 <%- include('footerClient') %> 
+    <script src="/script/scriptShowload.js"></script>
     <script src="/script/scriptselectProduct.js"></script>
     <script src="/script/script.js"></script>
 </body>
