--- a/views/headerClient.ejs
+++ b/views/headerClient.ejs
@@ -19,7 +19,7 @@
         </div>
         <div class="navbar ">
             <ul class="navbar-ul">
-                <li><a href="/"><i class="fas fa-home"></i><span>หน้าแรก</span></a></li>
+                <li><a href="/" id="link_home"><i class="fas fa-home"></i><span>หน้าแรก</span></a></li>
                 <li><a href="/howtoBuy"><i class="fas fa-chalkboard-teacher"></i><span> ขั้นตอนการสั่งซื้อ</span></a></li>
                 <li><a href="https://web.facebook.com/parndhom" target="_blank"><i class="fas fa-bullhorn"></i><span>โปรโมชั่น</span></a></li>
                 <li><a href="#contactUs"><i class="fas fa-phone-alt"></i><span>ติดต่อเรา</span></a></li>
