--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
             </div>
             <% }) %>
             <div class="button-proshow">
-                <a href="/selectProduct"> <span>เลือกสินค้าได้ที่นี่</span> <i class="fas fa-shopping-cart"></i></a>
+                <a href="/selectProduct" id="link_select"> <span>เลือกสินค้าได้ที่นี่</span> <i class="fas fa-shopping-cart"></i></a>
             </div>
         </div>
         <div class="con-content">
