--- a/views/clientSelectProduct.ejs
+++ b/views/clientSelectProduct.ejs
@@ -106,7 +106,7 @@
             loadshow.style.display = 'block';
         
         })
-        link_topay.addEventListener('click', function(){
+        link_topay.addEventListener('submit', function(){
             loadshow.style.display = 'block';
 
         })
