--- a/views/clientPayment.ejs
+++ b/views/clientPayment.ejs
@@ -14,7 +14,7 @@
     <%- include('Allshowload') %> 
     <%- include('headerClient') %>    
 <main class="main-payment">
-    <form class="form-payment" id="form_buyer" action="/checkTOpay" method="post" enctype="multipart/form-data" >
+    <form class="form-payment" id="form_buyer" action="/checktopay" method="POST" enctype="multipart/form-data" >
      
         <div class="purchase-list">
             <div class="container-list">
